--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"  data-theme="light>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml+jpg+png" href="/src/assets/hub-icon.png" />
